[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ten-u-futures-signal"
version = "0.1.0"
description = "10USDT Binance USD-M perpetual futures short-term signal research and terminal scanner."
requires-python = ">=3.11"
dependencies = ["pandas-market-calendars>=4.4"]
authors = [{ name = "Codex" }]

[project.optional-dependencies]
ws = ["websocket-client>=0.58"]
dev = ["pytest>=8"]

[project.scripts]
ten-u = "ten_u.cli:main"

[tool.setuptools.packages.find]
include = ["ten_u*"]
